# nat-xiaozhi-voice-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_en.md  docker-compose.yml  mcp_ws_relay.py  py-xiaozhi-ws.py  pyproject.toml  test_vlm.py
client/: camera_server.py  py-xiaozhi-ws.py
configs/: gemma4_no_think.jinja  xiaozhi_voice.yml  xiaozhi_voice_e2e.yml  xiaozhi_voice_qwen3.yml
scripts/: qwen3_omni_single_gpu_async.yaml  start-nano-omni-docker.sh  start-nano-omni.sh  start_vllm_omni_serve.sh  start_vllm_serve.sh
src/nat_xiaozhi_voice/: __init__.py
src/nat_xiaozhi_voice/frontend/: config.py  connection.py  plugin.py  register.py  ws_server.py
src/nat_xiaozhi_voice/pipeline/: asr.py  asr_qwen3_omni.py  asr_sensevoice.py  omni_e2e.py  tools.py  tts.py  vad.py
src/nat_xiaozhi_voice/tools/: __init__.py  openclaw_delegate.py  openclaw_register.py  register.py  vlm_camera.py
src/nat_xiaozhi_voice/utils/: audio_codec.py  audio_rate_controller.py  auth.py
src/nat_xiaozhi_voice/workflow/: register.py
